<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.epickiwi.uberdrive.PlanetActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="20dp"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:scaleX="2"
            android:scaleY="2"
            app:srcCompat="@drawable/ic_planet" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="20dp"
                    android:text="@string/climatPlanetField"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/climatPlanetField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="20dp"
                    android:text="@string/loading"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="20dp"
                    android:text="@string/terrainPlanetFIeld"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/terrainPlanetField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="20dp"
                    android:text="@string/loading"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="20dp"
                    android:text="@string/populationPlanetField"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/populationPlanetField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="20dp"
                    android:text="@string/loading"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="20dp"
                    android:text="@string/diameterplanetField"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/diameterPlanetField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="20dp"
                    android:text="@string/loading"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="20dp"
                    android:text="@string/gravityPlanetField"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/gravityPlanetField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="20dp"
                    android:text="@string/loading"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />
            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/startButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/planetGoButton" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
