<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.epickiwi.uberdrive.SimulationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:elevation="20dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/journeyStart"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <include
                        android:id="@+id/startPlanetInclude"
                        layout="@layout/planet_view"
                        layout_width="match_parent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/journeyEnd"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <include
                        android:id="@+id/destinationPlanetInclude"
                        layout="@layout/planet_view"
                        layout_width="match_parent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/journeySpaceship"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <include
                        android:id="@+id/spaceshipInclude"
                        layout="@layout/spaceship_view"
                        layout_width="match_parent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="25dp"
                        android:paddingTop="25dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView18"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:paddingRight="20dp"
                                android:text="@string/JourneyDistance"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/distanceText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:paddingRight="20dp"
                                android:text="@string/JourneyDistance"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView18"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:paddingRight="20dp"
                                android:text="@string/JourneyDuration"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/durationText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:paddingRight="20dp"
                                android:text="Duration"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView19"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/journeyTotalPrice"
                            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                            android:textColor="@color/colorAccent" />

                        <TextView
                            android:id="@+id/totalPriceText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Total"
                            android:textAlignment="textEnd"
                            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                            android:textColor="@color/colorAccent" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/validateButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/journeyValidate"
                        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button" />

                    <android.support.v7.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </ScrollView>

            <FrameLayout
                android:id="@+id/loadingPanel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBackground"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ProgressBar
                        android:id="@+id/progressBar"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="20dp"
                        android:text="@string/loadingJourney"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                </LinearLayout>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/completedPanel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleX="2"
                        android:scaleY="2"
                        app:srcCompat="@mipmap/ic_launcher_foreground" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/journeyCompleted"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                        android:textColor="@color/colorText" />

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="20dp"
                        android:text="@string/journeyCompletedSubtitle"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <Button
                        android:id="@+id/backButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:text="@string/journeyCompletedBack"
                        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button" />

                </LinearLayout>

            </FrameLayout>

        </FrameLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
